crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_w74__w74_analysis_json_with_derived.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_w74.rs
assertion_line: 377
expression: out
---
{
  "schema_version": 9,
  "generated_at_ms": 0,
  "tool": {
    "name": "tokmd",
    "version": "0.0.0-test"
  },
  "mode": "analyze",
  "status": "complete",
  "warnings": [],
  "source": {
    "inputs": [
      "."
    ],
    "export_path": null,
    "base_receipt_path": null,
    "export_schema_version": null,
    "export_generated_at_ms": null,
    "base_signature": null,
    "module_roots": [],
    "module_depth": 1,
    "children": "collapse"
  },
  "args": {
    "preset": "receipt",
    "format": "json",
    "window_tokens": null,
    "git": null,
    "max_files": null,
    "max_bytes": null,
    "max_commits": null,
    "max_commit_files": null,
    "max_file_bytes": null,
    "import_granularity": "module"
  },
  "archetype": null,
  "topics": null,
  "entropy": null,
  "predictive_churn": null,
  "corporate_fingerprint": null,
  "license": null,
  "derived": {
    "totals": {
      "files": 12,
      "code": 2400,
      "comments": 310,
      "blanks": 160,
      "lines": 2870,
      "bytes": 72000,
      "tokens": 19200
    },
    "doc_density": {
      "total": {
        "key": "total",
        "numerator": 310,
        "denominator": 2710,
        "ratio": 0.1143
      },
      "by_lang": [
        {
          "key": "Rust",
          "numerator": 250,
          "denominator": 2100,
          "ratio": 0.119
        },
        {
          "key": "TOML",
          "numerator": 60,
          "denominator": 610,
          "ratio": 0.0983
        }
      ],
      "by_module": []
    },
    "whitespace": {
      "total": {
        "key": "total",
        "numerator": 160,
        "denominator": 2870,
        "ratio": 0.0557
      },
      "by_lang": [],
      "by_module": []
    },
    "verbosity": {
      "total": {
        "key": "total",
        "numerator": 72000,
        "denominator": 2870,
        "rate": 25.08
      },
      "by_lang": [],
      "by_module": []
    },
    "max_file": {
      "overall": {
        "path": "src/core.rs",
        "module": "src",
        "lang": "Rust",
        "code": 520,
        "comments": 75,
        "blanks": 40,
        "lines": 635,
        "bytes": 15600,
        "tokens": 4160,
        "doc_pct": 0.126,
        "bytes_per_line": 24.56,
        "depth": 1
      },
      "by_lang": [],
      "by_module": []
    },
    "lang_purity": {
      "rows": []
    },
    "nesting": {
      "max": 6,
      "avg": 2.8,
      "by_module": []
    },
    "test_density": {
      "test_lines": 350,
      "prod_lines": 2050,
      "test_files": 4,
      "prod_files": 8,
      "ratio": 0.1707
    },
    "boilerplate": {
      "infra_lines": 120,
      "logic_lines": 2750,
      "ratio": 0.0436,
      "infra_langs": [
        "TOML",
        "YAML"
      ]
    },
    "polyglot": {
      "lang_count": 3,
      "entropy": 0.78,
      "dominant_lang": "Rust",
      "dominant_lines": 2100,
      "dominant_pct": 0.73
    },
    "distribution": {
      "count": 12,
      "min": 45,
      "max": 635,
      "mean": 239.16,
      "median": 195.0,
      "p90": 520.0,
      "p99": 635.0,
      "gini": 0.32
    },
    "histogram": [
      {
        "label": "Small",
        "min": 0,
        "max": 100,
        "files": 5,
        "pct": 0.4167
      },
      {
        "label": "Medium",
        "min": 101,
        "max": 500,
        "files": 5,
        "pct": 0.4167
      },
      {
        "label": "Large",
        "min": 501,
        "max": null,
        "files": 2,
        "pct": 0.1667
      }
    ],
    "top": {
      "largest_lines": [
        {
          "path": "src/core.rs",
          "module": "src",
          "lang": "Rust",
          "code": 520,
          "comments": 75,
          "blanks": 40,
          "lines": 635,
          "bytes": 15600,
          "tokens": 4160,
          "doc_pct": 0.126,
          "bytes_per_line": 24.56,
          "depth": 1
        }
      ],
      "largest_tokens": [],
      "largest_bytes": [],
      "least_documented": [],
      "most_dense": []
    },
    "tree": null,
    "reading_time": {
      "minutes": 143.5,
      "lines_per_minute": 20,
      "basis_lines": 2870
    },
    "context_window": {
      "window_tokens": 128000,
      "total_tokens": 19200,
      "pct": 15.0,
      "fits": true
    },
    "cocomo": {
      "mode": "organic",
      "kloc": 2.4,
      "effort_pm": 6.87,
      "duration_months": 4.56,
      "staff": 1.5,
      "a": 2.4,
      "b": 1.05,
      "c": 2.5,
      "d": 0.38
    },
    "todo": {
      "total": 8,
      "density_per_kloc": 3.33,
      "tags": [
        {
          "tag": "TODO",
          "count": 5
        },
        {
          "tag": "FIXME",
          "count": 3
        }
      ]
    },
    "integrity": {
      "algo": "blake3",
      "hash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "entries": 12
    }
  },
  "assets": null,
  "deps": null,
  "git": null,
  "imports": null,
  "dup": null,
  "complexity": null,
  "api_surface": null,
  "effort": null,
  "fun": null
}
