crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_w74__w74_analysis_md_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_w74.rs
assertion_line: 299
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
